--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <h2 class="mb-4">Todo</h2>
 
                 <div id="todo-list">
-                    <div class="task" id="task-${task.id}">
+                    <div class="task" id="task-1">
                         <span class="priority"></span>
-                        <label for="task-checkbox-${task.id}" class="title">
+                        <label for="task-checkbox-1" class="title">
                             First Task
                             <i class="bi-pencil"></i>
                         </label>
-                        <input id="task-checkbox-${task.id}" data-id="${task.id}" type="checkbox">
+                        <input id="task-checkbox-1" type="checkbox">
                     </div>
                 </div>
 
